recursion.cons.lessons.recursion.cons.Reverse.scala.code
def reverse(l:List[Int]): List[Int] = {
  def last(l:List[Int]): Int = {
  if (l==Nil) {
    return 0
  } else if (l.tail==Nil) {
    return l.head
  } else last(l.tail)
}
  if (l==Nil) {
    return l
  } else return last(l)::reverse()
}
